implement format
